<resources>
    <string name="app_name">Google_Tasks</string>
    <string name="app_tittle">Задачи</string>
    <string name="account">Аккаунт</string>
    <string name="more">more</string>
    <string name="create_task">создать задачу</string>
    <string name="new_task">Новая задача</string>
    <string name="addit_info">дополнительная информация</string>
    <string name="save">Сохранить</string>
    <string name="enter_title">Введите название</string>
    <string name="mark_completed">Добавить в выполненные</string>
    <string name="mark_uncompleted">Убрать из выполненных</string>
    <string name="my_tasks">       Мои задачи</string>
    <string name="chosen">Избранные</string>
    <string name="completed">       Выполненные</string>
</resources>